5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4353/executions/1649_2442.log
== SUBMITION (2019-04-14 21:02:20) 
-- CODE:
x=int(input("digite um numero: "))
if(x%==0)
	print("par")
else
	print("impar")
-- EXECUTION TIME:
0.173071
-- ERROR:
  File "/home/codebench/codes/1649/2442/main.py", line 2
    if(x%==0)
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:03:01) 
-- CODE:
x=int(input("digite um numero: "))
if(x%2==0)
	print("par")
else
	print("impar")
-- EXECUTION TIME:
0.177179
-- ERROR:
  File "/home/codebench/codes/1649/2442/main.py", line 2
    if(x%2==0)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:03:27) 
-- CODE:
x=int(input("digite um numero: "))
if(x%2==0)
	print("par")
else
	print("impar")
-- EXECUTION TIME:
0.194183
-- ERROR:
  File "/home/codebench/codes/1649/2442/main.py", line 2
    if(x%2==0)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:04:21) 
-- CODE:
x=int(input("digite um numero: "))
if(x%2==0):
	print("par")
else:
	print("impar")
-- EXECUTION TIME:
0.309975
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
par
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
